# PromptVerge

./: .gitignore  CONTEXT.md  README.md  forensic_pipeline.mjs  pyproject.toml  requirements.txt
.github/aiv-evidence/: EVIDENCE_.GITHUB_AIV_PACKETS_PACKET_PROMPTVERGE_F171_TESTS.MD.md  EVIDENCE_PROMPTVERGE_EMIT.PY.BUG_CATALOG.MD.md  EVIDENCE_PROMPTVERGE_EMIT.md  EVIDENCE_PROMPTVERGE_FLOWS_VERDICTS_WORKFLOW.md  EVIDENCE_PROMPTVERGE_FLOWS__VERDICTS_STORE.md  EVIDENCE_PROMPTVERGE_FLOWS___INIT__.md  EVIDENCE_PROMPTVERGE_SCHEMAS_VALIDATOR.md  EVIDENCE_PYPROJECT.TOML.md  EVIDENCE_TESTS_CONFTEST.md  (+7 more)
audit/: 01-understanding.md  02-static-audit.md  03-execution.md  04-goal.md  05-plan.md
docs/: DocumentSchemas.md  SOP_Cognitive_Training_Verification.md  TECHNICAL_DEBT.md  Zero-Day-MVP.md  analysis.md  architecture_overview.md  doc-guid.md  oringal_convo.md  project_charter.md
evals/: golden_verdict_cards.yaml
promptverge/: __main__.py  auto_draft.py  emit.py  emit.py.bug-catalog.md  main.py  prompts.py
scripts/: run_auto_draft.sh
tests/: conftest.py  test_auto_draft.py  test_cli.py  test_completeness.py  test_e2e_flow.py  test_emit.py  test_emit_live.py  test_engineering_workflow_core_units.py  test_engineering_workflow_integration.py  test_engineering_workflow_units.py  test_full_workflow.py  test_kg_direct.py  test_knowledge_workflow_units.py  test_validator_f171.bug-catalog.md  test_validator_f171.py  test_verdicts_enrich.py  test_verdicts_flow.py  test_verdicts_workflow.py  test_verdicts_workflow.py.bug-catalog.md  verdicts_workflow.bug-catalog.md
(+62 files in other folders)
