[project]
name = "promptverge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "marvin",
    "openai>=1.0.0,<2.0.0",
    "prefect",
    "pydantic",
    "typer[all]",
    "rich",
    "spacy",
    "zshot",
    "jinja2",
    "pyyaml",
    "jsonschema",
    "gliner"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff==25.12.0", "types-jsonschema", "snoop", "pytest-cov"]

[project.scripts]
promptverge = "promptverge.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests",
    "live_ai: marks tests that require live AI API calls (requires OPENAI_API_KEY)",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "marvin.*",
    "prefect.*"
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["promptverge"]
